# Data_governance_mining

./: README.md  pyproject.toml
docs/: architecture.md  integration.md
src/data_governance/: __init__.py
src/data_governance/agent/: __init__.py  decisions.py  governance_agent.py
src/data_governance/api/: __init__.py  cli.py  facade.py  tools.py
src/data_governance/core/: __init__.py  config.py  models.py
src/data_governance/daemon/: __init__.py  monitor.py
src/data_governance/dedup/: __init__.py  engine.py  hash_dedup.py  semantic_dedup.py
src/data_governance/freshness/: __init__.py  policies.py  tracker.py
src/data_governance/lineage/: __init__.py  tracker.py
src/data_governance/profiler/: __init__.py  chunk.py  collection.py  document.py  metrics.py
src/data_governance/protocol/: __init__.py  data_passport.py  quality_embed.py
src/data_governance/reporter/: __init__.py  alerts.py  health.py
src/data_governance/validation/: __init__.py  builtin.py  engine.py  rules.py
tests/: test_agent.py  test_dedup.py  test_freshness.py  test_profiler.py  test_protocol.py  test_validation.py
